# clash-for-AutoDL

./: .gitignore  CMakeLists.txt  README.md  README.ubuntu.md  h origin --delete deb  install.sh  restart.sh  shutdown.sh  start.sh
.github/workflows/: publish.yml
DEBIAN/: control  postinst  prerm
debian/: control  postinst  preinst  prerm
dev/: push.sh
dev/structure/: create_deb_structure.sh
src/: clash_manager.cpp
